hphp/hack/test/sound_dynamic/typing/supportdyn.bad.php.exp
File "supportdyn.bad.php", line 8, characters 3-11:
a nonnull value does not allow array append (Typing[4006])
  File "supportdyn.bad.php", line 6, characters 26-32:
  Definition is here
File "supportdyn.bad.php", line 28, characters 6-6:
Enums must be `int` or `string` or `arraykey`, not `supportdyn<nonnull>` (Typing[4024])
File "supportdyn.bad.php", line 9, characters 3-5:
Was expecting a class, but got a nonnull value (Typing[4026])
File "supportdyn.bad.php", line 10, characters 8-8:
You are trying to access the method `m` but this is a nonnull value. Use a **specific** class or interface name. (Typing[4062])
  File "supportdyn.bad.php", line 6, characters 26-32:
  Definition is here
File "supportdyn.bad.php", line 11, characters 9-9:
You are trying to access the method `m` but this is a nonnull value. Use a **specific** class or interface name. (Typing[4062])
  File "supportdyn.bad.php", line 6, characters 26-32:
  Definition is here
File "supportdyn.bad.php", line 12, characters 3-5:
Typing error (Typing[4062])
  File "supportdyn.bad.php", line 12, characters 8-8:
  You are trying to access the property `p` but this is a nonnull value. Use a **specific** class or interface name.
  File "supportdyn.bad.php", line 6, characters 26-32:
  Definition is here
File "supportdyn.bad.php", line 13, characters 3-5:
Typing error (Typing[4062])
  File "supportdyn.bad.php", line 13, characters 9-9:
  You are trying to access the property `p` but this is a nonnull value. Use a **specific** class or interface name.
  File "supportdyn.bad.php", line 6, characters 26-32:
  Definition is here
File "supportdyn.bad.php", line 26, characters 27-30:
Invalid type hint (Typing[4062])
  File "supportdyn.bad.php", line 26, characters 30-30:
  You are trying to access the type constant `C` but this is a nonnull value
  File "supportdyn.bad.php", line 24, characters 21-27:
  Definition is here
File "supportdyn.bad.php", line 19, characters 12-14:
Invalid `foreach` (Typing[4110])
  File "supportdyn.bad.php", line 19, characters 12-14:
  Expected an array that can be traversed with foreach because this is used in a `foreach` statement
  File "supportdyn.bad.php", line 18, characters 32-38:
  But got `nonnull`
File "supportdyn.bad.php", line 20, characters 12-14:
Invalid `foreach` (Typing[4110])
  File "supportdyn.bad.php", line 20, characters 12-14:
  Expected an array that can be traversed with foreach because this is used in a `foreach` statement
  File "supportdyn.bad.php", line 18, characters 32-38:
  But got `nonnull`
File "supportdyn.bad.php", line 21, characters 3-11:
`await` can only operate on an `Awaitable` (Typing[4110])
  File "supportdyn.bad.php", line 21, characters 3-11:
  Expected `Awaitable<nothing>`
  File "supportdyn.bad.php", line 18, characters 32-38:
  But got `nonnull`
File "supportdyn.bad.php", line 38, characters 10-18:
Invalid return type (Typing[4110])
  File "supportdyn.bad.php", line 37, characters 42-48:
  Expected `nonnull`
  File "supportdyn.bad.php", line 36, characters 20-23:
  But got `void`
File "supportdyn.bad.php", line 42, characters 10-19:
Invalid return type (Typing[4110])
  File "supportdyn.bad.php", line 41, characters 38-56:
  Expected `dynamic`
  File "supportdyn.bad.php", line 4, characters 29-35:
  Type `nonnull` is not a subtype of `dynamic` under dynamic-aware subtyping
File "supportdyn.bad.php", line 49, characters 48-49:
Invalid argument (Typing[4110])
  File "supportdyn.bad.php", line 45, characters 34-52:
  Expected `dynamic`
  File "supportdyn.bad.php", line 4, characters 29-35:
  Type `nonnull` is not a subtype of `dynamic` under dynamic-aware subtyping
File "supportdyn.bad.php", line 14, characters 9-11:
Expected an object convertible to string but got a value of type supportdyn<nonnull> (Typing[4318])
File "supportdyn.bad.php", line 7, characters 3-8:
This is not an object of type `KeyedContainer`, this is a value of type supportdyn<nonnull> (Typing[4324])
  File "supportdyn.bad.php", line 6, characters 15-33:
  Definition is here
File "supportdyn.bad.php", line 15, characters 3-5:
Typing error (Typing[4429])
  File "supportdyn.bad.php", line 15, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "supportdyn.bad.php", line 6, characters 26-32:
  But got `nonnull`
